# talculator

./: .gitignore  .tm_project.cache  AUTHORS  ChangeLog  Makefile.am  NEWS  PKGBUILD  README  config.h.in  configure.ac  talculator.appdata.xml.in  talculator.desktop.in  talculator.spec.in
.tx/: config
doc/: Makefile.am  gtk2-removal-plan.md  libqalculate-port-plan.md  shortcuts  talculator.1
pixmaps/: Makefile.am  talculator.xpm
po/: POTFILES.in  README.Translation  am.po  ar.po  be.po  bg.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  es_MX.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  mr.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  (+4 more)
src/: Makefile.am  calc_basic.c  calc_basic.h  callbacks.c  callbacks.h  config_file.c  config_file.h  display.c  display.h  engine.c  engine.h  engine_qalc_bridge.cpp  engine_qalc_bridge.h  flex_parser.h  flex_parser.l  g_real.h  galculator.h  general_functions.c  general_functions.h  main.c  math_functions.c  math_functions.h  talculator.h  ui.c  ui.h
tests/: Makefile.am  engine_accuracy_test.c  rpn_stack_test.c
ui/: Makefile.am  about.ui.in  basic_buttons_gtk3.ui  classic_view.ui  dispctrl_bottom_gtk2.ui  dispctrl_bottom_gtk3.ui  dispctrl_right_gtk2.ui  dispctrl_right_gtk3.ui  dispctrl_right_vertical_gtk2.ui  dispctrl_right_vertical_gtk3.ui  main_frame.ui  main_frame_hildon.ui  paper_view.ui  prefs-ume.ui  prefs_gtk2.ui  prefs_gtk3.ui  scientific_buttons_gtk3.ui
